--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cal",
   "private": true,
-  "homepage": "",
+  "homepage": "https://s-axhwin.github.io/Calculator-v2/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -9,8 +9,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "predeploy": "npm build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
